# vormetra-slice

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FORK_NOTES.md  README.md  SECURITY.md  version.inc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
resources/profiles/: VORMETRA.json
resources/profiles/VORMETRA/: README.md
resources/profiles/VORMETRA/filament/: VORMETRA PETG Pellet.json  VORMETRA PLA Pellet.json
resources/profiles/VORMETRA/machine/: VORMETRA G1000 5.0 nozzle.json  VORMETRA G1000.json  VORMETRA_G1000_common.json  fdm_machine_common.json
resources/profiles/VORMETRA/process/: 2.00mm Standard.json
vera-control/: LICENSE  README.md  pyproject.toml  run_dev.py
vera-control/tests/: test_api.py  test_profile_safety.py  test_slicer_bridge.py  test_stl_utils.py
vera-control/vera_control/: __init__.py  api.py  config.py  mcp_server.py  slicer_bridge.py  stl_utils.py
vera-control/vera_control/console/: index.html
